--- a/views/partials/allArticles.ejs
+++ b/views/partials/allArticles.ejs
@@ -23,8 +23,11 @@
                         dashboard</button></a>
                 <div class="msg-title">
                     <h1>
-                        <%=msg%>
+                        Welcome To Article Page
                     </h1>
+                    <p style="display: none;">
+                        <%=msg%>
+                    </p>
                 </div>
             </div>
 
@@ -63,34 +66,35 @@
                         </ul>
 
 
-                        <div class="d-btns" idArticle="<%=articles[index]._id%>">
+                        <div class="d-btns" id="d-btn-article" idArticle="<%=articles[index]._id%>">
 
-                            <button id="btn-update-article"
-                                class="btn-update-article-admin btn btn-primary">Update</button>
-
-                            <form action="/admin/dashboard/articles/seeMine/detailsOneArticle"
+                            <form action="/:role/dashboard/articles/seeAll/detailsOneArticle"
                                 method="post">
-
                                 <input type="text" style="display: none;" value="<%=articles[index]._id%>"
                                     name="idArticle">
-                                <button type="submit" id="btn-see-my-articles"
-                                    class="btn-details-articles btn btn-success">See More</button>
+                                <button type="submit" id="seeMore-articles"
+                                    class="seeMore-articles btn btn-success">See More</button>
                             </form>
-
-                            <form action="/admin/dashboard/articles/seeMine/delete" method="post">
+                            <P style="display: none;">
+                            <%= role %>   
+                            </P>
+                            <% if(role){ %> 
+                                <form action="/:role/dashboard/articles/seeMine/delete" method="post">
                                 <input type="text" style="display: none;" value="<%=articles[index]._id%>"
-                                    name="idArticle">
+                                name="idArticle">
                                 <button type="submit" id="btn-delete-articles"
-                                    class="btn-delete-articles-admin btn btn-danger">Delete</button>
-                            </form>
+                                    class="btn-delete-articles btn btn-danger">Delete</button>
+                                </form>
+                            <%  } %>                           
+                           
                         </div>
                     </div>
                     <% } %>
 
             </div>
 
-            <form action="/admin/dashboard/articles/seeMine/update" method="post">
-                <div class="modal" id="modal-updateArticleAdmin">
+            <form action="/:role/dashboard/articles/seeMine/update" method="post" role="form" enctype="multipart/form-data">
+                <div class="modal" id="modal-updateArticle">
                     <div class="modal-body">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -98,6 +102,7 @@
                                 <button type="button"  class="close-article-update-admin" data-bs-dismiss="modal"
                                     aria-label="Close"> &#10006</button>
                             </div>
+                            <input style="display: none;" id="idArticle" name="idArticle">
                             <div class="modal-body-2">
                                 <div class="">
 
@@ -114,7 +119,7 @@
 
                                 <div class="form-group">
                                     <label for="img-article">Image Of Article:</label>
-                                    <input type="file" id="imgArticle" name="imgArticle">
+                                    <input type="file" id="imgArticle" name="imgUpdateArticle">
 
                                 </div>
 
@@ -135,5 +140,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="/js/main.js"></script>
+
+<script>
+    let msg = `<%= msg %>`;
+    if (msg) {
+        alert(msg)
+    };
+</script>
 
 </html>
