--- a/public/css/Articles.css
+++ b/public/css/Articles.css
@@ -1,7 +1,7 @@
-html *
-{
-   font-family:Tahoma, sans-serif !important;
+html * {
+    font-family: Tahoma, sans-serif !important;
 }
+
 .countainer {
     width: 100%;
     position: relative;
@@ -94,51 +94,13 @@ html *
 
 }
 
-.modal-body-2 {
-
-    width: 100%;
-    height: 400px;
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    flex-direction: column;
-    padding: 5px;
-
-}
-
-.position-right {
+.close-update-article{
     position: absolute;
-    right: 0;
+    top: 10px;
+    right: 10px;
 }
 
-.position-left {
-    position: absolute;
-    left: 135px;
-    top: 5px;
-}
+.w-650px {
 
-.modal-content {
-    width: 600px;
-    height: 550px;
-}
-
-.modal-header {
-    position: relative;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-
-}
-
-.modal-title {
-    margin: 0 auto;
-}
-.w-450px{
-    width: 450px;
-}
-
-.w-500px{
-
-    width: 500px;
+    width: 650px;
 }
