--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -29,8 +29,7 @@ html *
 }
 
 .d-info {
-
-    width: 280px;
+    width: 320px;
     height: 500px;
     margin-top: 35px;
 
@@ -50,8 +49,8 @@ html *
 }
 
 .row-info {
-    margin-left: 7px;
-    width: 250px;
+    margin-left: 15px;
+    width: 290px;
     position: relative;
     display: flex;
     flex-direction: row;
@@ -62,10 +61,11 @@ html *
 .d-btns {
     margin-top: 10px;
     width: 100%;
-    height: 80px;
+    height: 130px;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    align-content: space-around;
 
 }
 
@@ -166,8 +166,16 @@ html *
     border-radius: 100px;
 }
 
+.w-150px{
+    width: 150px;
+}
 
 .w-650px {
 
     width: 650px;
+}
+
+.btn-avatar{
+    width: 150px;
+    margin-left: 30px;
 }
