--- a/views/admin/listOfBloggers.ejs
+++ b/views/admin/listOfBloggers.ejs
@@ -64,7 +64,7 @@
 
                                         <form action="/admin/dashboard/seeBloggers/deleteBlogger" method="post"
                                             class="formDeleteBlogger">
-                                            <input type="text" style="display: none;" id="idBlogger" name="idUser">
+                                            <input type="text" style="display: none;" id="idBlogger" name="idBlogger">
                                             <button type="submit"
                                                 class="btn-delete-blogger btn-delete btn btn-danger">delete
                                                 user</button>
