--- a/views/admin/seeComments.ejs
+++ b/views/admin/seeComments.ejs
@@ -34,10 +34,10 @@
                         <tbody>
                             <% for(var index=0;index < comments.length ;index++ ){ %>
                                 <tr>
-                                    <td>
+                                    <td class="td-writer">
                                         <%= comments[index].writer %>
                                     </td>
-                                    <td>
+                                    <td class="td-comment">
                                         <%= comments[index].text %>
                                     </td>
                                     <td idComment="">
