--- a/views/partials/dashboard.ejs
+++ b/views/partials/dashboard.ejs
@@ -54,16 +54,11 @@
                     <div class="row-info ">
                         <h4>phoneNumber:</h4>
 
-                        <%if((user.phoneNumber)){%>
-                            <h4 class="position-right">
-                                <%= user.phoneNumber %>
-                            </h4>
-                            <%}else{ %>
-                                <h4>
-                                    0<%= user.phoneNumber %>
-                                </h4>
 
-                                <% } %>
+                        <h4 class="position-right">
+                            <%= user.phoneNumber %>
+                        </h4>
+
 
 
                     </div>
@@ -173,15 +168,29 @@
 
                                     <h4 class="labels-update">gender:</h4>
                                     <div class="input-update-gender">
-                                        <input class="form-check-input" type="radio" name="gender" id="male"
-                                            value="male">
-                                        <label class="form-check-label" for="male">
-                                            male </label>
-                                        <input class="form-check-input" type="radio" name="gender" id="female"
-                                            value="female">
-                                        <label class="form-check-label" for="female">
-                                            female
-                                        </label>
+                                        <% if(user.gender=='male' ){ %>
+
+                                            <input class="form-check-input" type="radio" name="gender" id="male"
+                                                value="male" checked>
+                                            <label class="form-check-label" for="male">
+                                                male </label>
+                                            <input class="form-check-input" type="radio" name="gender" id="female"
+                                                value="female">
+                                            <label class="form-check-label" for="female">
+                                                female
+                                            </label>
+                                            <% }else{ %>
+                                                <input class="form-check-input" type="radio" name="gender" id="male"
+                                                    value="male" checked>
+                                                <label class="form-check-label" for="male">
+                                                    male </label>
+                                                <input class="form-check-input" type="radio" name="gender" id="female"
+                                                    value="female" checked>
+                                                <label class="form-check-label" for="female">
+                                                    female
+                                                </label>
+                                                <% } %>
+
                                     </div>
                                 </div>
                             </div>
