--- a/views/partials/dashboard.ejs
+++ b/views/partials/dashboard.ejs
@@ -185,7 +185,7 @@
                                                 <label class="form-check-label" for="male">
                                                     male </label>
                                                 <input class="form-check-input" type="radio" name="gender" id="female"
-                                                    value="female" checked>
+                                                    value="female" checkedt>
                                                 <label class="form-check-label" for="female">
                                                     female
                                                 </label>
